--- a/example/index.html
+++ b/example/index.html
@@ -50,17 +50,18 @@
     <div class="text-center">
         <div class="block">
             <div class="row justify-content-center">
-                <div class="col-12 col-lg-6 col-xl-4">
+                <div class="col-12 col-lg-6 col-xl-6">
                     <div class="btn-group mb-2" role="group">
                         <button type="button" class="btn btn-success js-play">Play</button>
                         <button type="button" class="btn btn-danger js-stop">Stop</button>
+                        <button type="button" class="btn btn-info js-toggle">Toggle</button>
                         <button type="button" class="btn btn-info js-next">Next</button>
                         <button type="button" class="btn btn-info js-prev">Prev</button>
                         <button type="button" class="btn btn-info js-reset">Reset</button>
                         <button type="button" class="btn btn-info js-reverse">Reverse</button>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 col-xl-5">
+                <div class="col-12 col-lg-6 col-xl-6">
                     <div class="form-group">
                         <label for="formControlRange">Frames</label>
                         <input class="form-control-range js-frames-input" id="formControlRange" max="61" min="1" type="range"
