--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <title>Sprite test</title>
 
     <style>
@@ -64,7 +64,7 @@
                 <div class="col-12 col-lg-6 col-xl-6">
                     <div class="form-group">
                         <label for="formControlRange">Frames</label>
-                        <input class="form-control-range js-frames-input" id="formControlRange" max="61" min="1" type="range"
+                        <input class="form-range js-frames-input" id="formControlRange" max="61" min="1" type="range"
                                value="1">
                     </div>
                 </div>
@@ -118,10 +118,6 @@
     </div>
 </div><!--/.container-->
 
-
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
 <script src="animate-sprite.min.js"></script>
 <script src="app.js"></script>
