settings, validation, DragInput

--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
         }
         .sprite1{
             max-width: 600px;
+            cursor: grab;
         }
         .sprite2{
             max-width: 600px;
