--- a/example/index.html
+++ b/example/index.html
@@ -20,13 +20,20 @@
         }
         .sprite2{
             max-width: 600px;
-            /*height: 350px;*/
-            /*background-size: 7800px 1750px;*/
             cursor: pointer;
+        }
+        input.form-control{
+            padding: 6px 6px;
+        }
+        .btn.off{
+            background-color: #6c757d;
+        }
+        .btn.on{
+            background-color: #26cc49;
         }
         @media (max-width: 991.98px) {
             .sprite2{
-                width: auto;
+                max-width: none;
             }
         }
         @media (max-width: 575px) {
@@ -51,7 +58,7 @@
     <div class="text-center">
         <div class="block">
             <div class="row justify-content-center">
-                <div class="col-12 col-lg-6 col-xl-6">
+                <div class="col-12 col-sm-auto  col-xl-auto">
                     <div class="btn-group mb-2" role="group">
                         <button type="button" class="btn btn-success js-play">Play</button>
                         <button type="button" class="btn btn-danger js-stop">Stop</button>
@@ -59,10 +66,23 @@
                         <button type="button" class="btn btn-info js-next">Next</button>
                         <button type="button" class="btn btn-info js-prev">Prev</button>
                         <button type="button" class="btn btn-info js-reset">Reset</button>
-                        <button type="button" class="btn btn-info js-reverse">Reverse</button>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 col-xl-6">
+                <div class="col-12 col-lg-auto col-xl-auto d-flex justify-content-center pt-2 mb-3 mb-lg-0">
+                    <div class="form-check form-switch me-3">
+                        <input class="form-check-input js-reverse" type="checkbox" id="reverse-checkbox">
+                        <label class="form-check-label" for="reverse-checkbox">Reverse</label>
+                    </div>
+                    <div class="form-check form-switch me-3">
+                        <input class="form-check-input js-loop" type="checkbox" id="loop-checkbox">
+                        <label class="form-check-label" for="loop-checkbox">Loop</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input js-draggable" type="checkbox" id="draggable-checkbox">
+                        <label class="form-check-label" for="draggable-checkbox">Draggable</label>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-xl-4">
                     <div class="form-group">
                         <label for="formControlRange">Frames</label>
                         <input class="form-range js-frames-input" id="formControlRange" max="61" min="1" type="range"
@@ -71,7 +91,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-6 col-xl-3 js-option-block">
+                <div class="col-auto js-option-block">
                     <div class="input-group mb-2 mx-auto" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="15" value="15">
                         <div class="input-group-append">
@@ -79,7 +99,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-xl-3">
+                <div class="col-auto">
+                    <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 185px;">
+                        <input type="text" class="form-control" placeholder="30" value="30">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary js-play-to" type="button">Play to (frame)</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 160px;">
+                        <input type="text" class="form-control" placeholder="20" value="20">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary js-play-frames" type="button">Play Frames</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto">
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 230px;">
                         <input type="text" class="form-control" placeholder="1000" value="1000">
                         <div class="input-group-append">
@@ -87,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-xl-3">
+                <div class="col-auto">
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 230px;">
                         <input type="text" class="form-control" placeholder="45" value="45">
                         <div class="input-group-append">
@@ -95,8 +131,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-xl-3">
-                    <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 150px;">
+                <div class="col-auto">
+                    <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 125px;">
                         <input type="text" class="form-control" placeholder="60" value="60">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary js-set-fps" type="button">Set fps</button>
